<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/small_padding">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tag_expense_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:endIconMode="clear_text"
        app:helperText="@string/required"
        app:counterMaxLength="@integer/max_length_type"
        app:counterEnabled="true"
        app:startIconDrawable="@drawable/ic_menu_type"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:maxLength="@integer/max_length_type"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bSaveType"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/big_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:text="@string/tag_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>